lab4/src/mid/syntax.output
State 29 conflicts: 1 shift/reduce
State 34 conflicts: 2 shift/reduce
State 37 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 46 conflicts: 2 shift/reduce
State 59 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 140 conflicts: 10 shift/reduce
State 141 conflicts: 10 shift/reduce
State 142 conflicts: 10 shift/reduce
State 143 conflicts: 10 shift/reduce
State 144 conflicts: 10 shift/reduce
State 145 conflicts: 10 shift/reduce
State 146 conflicts: 10 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ε
    3           | ExtDef ExtDefList
    4           | error ExtDefList

    5 ExtDef: Specifier ExtDecList SEMI
    6       | error ExtDecList SEMI
    7       | Specifier ExtDecList error SEMI
    8       | Specifier SEMI
    9       | Specifier FunDec CompSt

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ε
   17       | ID

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error

   22 FunDec: ID LP VarList RP
   23       | ID LP error RP
   24       | ID LP RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | LC DefList StmtList error

   30 StmtList: ε
   31         | Stmt StmtList
   32         | error StmtList

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | RETURN error SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | IF LP Exp RP error ELSE Stmt
   40     | WHILE LP Exp RP Stmt
   41     | WHILE LP Exp error RP Stmt
   42     | WHILE LP Exp RP error

   43 DefList: ε
   44        | Def DefList
   45        | error DefList

   46 Def: Specifier DecList SEMI
   47    | Specifier error SEMI
   48    | error DecList SEMI

   49 DecList: Dec
   50        | Dec COMMA DecList

   51 Dec: VarDec
   52    | VarDec ASSIGNOP Exp
   53    | error ASSIGNOP Exp
   54    | VarDec ASSIGNOP error

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp AND Exp
   57    | Exp OR Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | Exp AND error Exp
   64    | Exp OR error Exp
   65    | Exp RELOP error Exp
   66    | Exp PLUS error Exp
   67    | Exp MINUS error Exp
   68    | Exp STAR error Exp
   69    | Exp DIV error Exp
   70    | LP Exp RP
   71    | MINUS Exp
   72    | NOT Exp
   73    | ID LP Args RP
   74    | ID LP RP
   75    | ID LP error
   76    | Exp LB Exp RB
   77    | Exp LB error
   78    | Exp DOT ID
   79    | ID
   80    | INT
   81    | FLOAT

   82 Args: Exp COMMA Args
   83     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 4 6 7 21 23 29 32 36 39 41 42 45 47 48 53 54 63 64 65 66 67 68 69 75 77
    SEMI <type_node> (258) 5 6 7 8 33 35 36 46 47 48
    COMMA <type_node> (259) 11 25 50 82
    ASSIGNOP <type_node> (260) 52 53 54 55
    RELOP <type_node> (261) 58 65
    PLUS <type_node> (262) 59 66
    MINUS <type_node> (263) 60 67 71
    STAR <type_node> (264) 61 68
    DIV <type_node> (265) 62 69
    AND <type_node> (266) 56 63
    OR <type_node> (267) 57 64
    DOT <type_node> (268) 78
    NOT <type_node> (269) 72
    TYPE <type_node> (270) 12
    LP <type_node> (271) 22 23 24 37 38 39 40 41 42 70 73 74 75
    RP <type_node> (272) 22 23 24 37 38 39 40 41 42 70 73 74
    LB <type_node> (273) 20 21 76 77
    RB <type_node> (274) 20 76
    LC <type_node> (275) 14 28 29
    RC <type_node> (276) 14 28
    STRUCT <type_node> (277) 14 15
    RETURN <type_node> (278) 35 36
    IF <type_node> (279) 37 38 39
    ELSE <type_node> (280) 38 39
    WHILE <type_node> (281) 40 41 42
    ID <type_node> (282) 17 18 19 22 23 24 73 74 75 78 79
    INT <type_node> (283) 20 80
    FLOAT <type_node> (284) 81
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <type_node> (32)
        on left: 1
        on right: 0
    ExtDefList <type_node> (33)
        on left: 2 3 4
        on right: 1 3 4
    ExtDef <type_node> (34)
        on left: 5 6 7 8 9
        on right: 3
    ExtDecList <type_node> (35)
        on left: 10 11
        on right: 5 6 7 11
    Specifier <type_node> (36)
        on left: 12 13
        on right: 5 7 8 9 27 46 47
    StructSpecifier <type_node> (37)
        on left: 14 15
        on right: 13
    OptTag <type_node> (38)
        on left: 16 17
        on right: 14
    Tag <type_node> (39)
        on left: 18
        on right: 15
    VarDec <type_node> (40)
        on left: 19 20 21
        on right: 10 11 20 21 27 51 52 54
    FunDec <type_node> (41)
        on left: 22 23 24
        on right: 9
    VarList <type_node> (42)
        on left: 25 26
        on right: 22 25
    ParamDec <type_node> (43)
        on left: 27
        on right: 25 26
    CompSt <type_node> (44)
        on left: 28 29
        on right: 9 34
    StmtList <type_node> (45)
        on left: 30 31 32
        on right: 28 29 31 32
    Stmt <type_node> (46)
        on left: 33 34 35 36 37 38 39 40 41 42
        on right: 31 37 38 39 40 41
    DefList <type_node> (47)
        on left: 43 44 45
        on right: 14 28 29 44 45
    Def <type_node> (48)
        on left: 46 47 48
        on right: 44
    DecList <type_node> (49)
        on left: 49 50
        on right: 46 48 50
    Dec <type_node> (50)
        on left: 51 52 53 54
        on right: 49 50
    Exp <type_node> (51)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
        on right: 33 35 37 38 39 40 41 42 52 53 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 76 77 78 82 83
    Args <type_node> (52)
        on left: 82 83
        on right: 73 82


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    4 ExtDefList: error • ExtDefList
    6 ExtDef: error • ExtDecList SEMI

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    ID      shift, and go to state 9

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 6
    ExtDecList       go to state 11
    Specifier        go to state 7
    StructSpecifier  go to state 8
    VarDec           go to state 12


State 2

   12 Specifier: TYPE •

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT • OptTag LC DefList RC
   15                | STRUCT • Tag

    ID  shift, and go to state 13

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 14
    Tag     go to state 15


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 17
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    5 ExtDef: Specifier • ExtDecList SEMI
    7       | Specifier • ExtDecList error SEMI
    8       | Specifier • SEMI
    9       | Specifier • FunDec CompSt

    SEMI  shift, and go to state 18
    ID    shift, and go to state 19

    ExtDecList  go to state 20
    VarDec      go to state 12
    FunDec      go to state 21


State 8

   13 Specifier: StructSpecifier •

    $default  reduce using rule 13 (Specifier)


State 9

   19 VarDec: ID •

    $default  reduce using rule 19 (VarDec)


State 10

    4 ExtDefList: error ExtDefList •

    $default  reduce using rule 4 (ExtDefList)


State 11

    6 ExtDef: error ExtDecList • SEMI

    SEMI  shift, and go to state 22


State 12

   10 ExtDecList: VarDec •
   11           | VarDec • COMMA ExtDecList
   20 VarDec: VarDec • LB INT RB
   21       | VarDec • LB error

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 10 (ExtDecList)


State 13

   17 OptTag: ID •
   18 Tag: ID •

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 18 (Tag)


State 14

   14 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 25


State 15

   15 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 15 (StructSpecifier)


State 16

    0 $accept: Program $end •

    $default  accept


State 17

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 18

    8 ExtDef: Specifier SEMI •

    $default  reduce using rule 8 (ExtDef)


State 19

   19 VarDec: ID •
   22 FunDec: ID • LP VarList RP
   23       | ID • LP error RP
   24       | ID • LP RP

    LP  shift, and go to state 26

    $default  reduce using rule 19 (VarDec)


State 20

    5 ExtDef: Specifier ExtDecList • SEMI
    7       | Specifier ExtDecList • error SEMI

    error  shift, and go to state 27
    SEMI   shift, and go to state 28


State 21

    9 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 29

    CompSt  go to state 30


State 22

    6 ExtDef: error ExtDecList SEMI •

    $default  reduce using rule 6 (ExtDef)


State 23

   11 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 9

    ExtDecList  go to state 31
    VarDec      go to state 12


State 24

   20 VarDec: VarDec LB • INT RB
   21       | VarDec LB • error

    error  shift, and go to state 32
    INT    shift, and go to state 33


State 25

   14 StructSpecifier: STRUCT OptTag LC • DefList RC

    error   shift, and go to state 34
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 36
    Def              go to state 37


State 26

   22 FunDec: ID LP • VarList RP
   23       | ID LP • error RP
   24       | ID LP • RP

    error   shift, and go to state 38
    TYPE    shift, and go to state 2
    RP      shift, and go to state 39
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 42


State 27

    7 ExtDef: Specifier ExtDecList error • SEMI

    SEMI  shift, and go to state 43


State 28

    5 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 5 (ExtDef)


State 29

   28 CompSt: LC • DefList StmtList RC
   29       | LC • DefList StmtList error

    error   shift, and go to state 34
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 43 (DefList)]
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 37


State 30

    9 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 9 (ExtDef)


State 31

   11 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 32

   21 VarDec: VarDec LB error •

    $default  reduce using rule 21 (VarDec)


State 33

   20 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 45


State 34

   45 DefList: error • DefList
   48 Def: error • DecList SEMI

    error   shift, and go to state 46
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    ID      shift, and go to state 9

    error   [reduce using rule 43 (DefList)]
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    ID      [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarDec           go to state 47
    DefList          go to state 48
    Def              go to state 37
    DecList          go to state 49
    Dec              go to state 50


State 35

   46 Def: Specifier • DecList SEMI
   47    | Specifier • error SEMI

    error  shift, and go to state 51
    ID     shift, and go to state 9

    VarDec   go to state 47
    DecList  go to state 52
    Dec      go to state 50


State 36

   14 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 53


State 37

   44 DefList: Def • DefList

    error   shift, and go to state 34
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 43 (DefList)]
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 37


State 38

   23 FunDec: ID LP error • RP

    RP  shift, and go to state 55


State 39

   24 FunDec: ID LP RP •

    $default  reduce using rule 24 (FunDec)


State 40

   27 ParamDec: Specifier • VarDec

    ID  shift, and go to state 9

    VarDec  go to state 56


State 41

   22 FunDec: ID LP VarList • RP

    RP  shift, and go to state 57


State 42

   25 VarList: ParamDec • COMMA VarList
   26        | ParamDec •

    COMMA  shift, and go to state 58

    $default  reduce using rule 26 (VarList)


State 43

    7 ExtDef: Specifier ExtDecList error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 44

   28 CompSt: LC DefList • StmtList RC
   29       | LC DefList • StmtList error

    error   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 29
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    ID      shift, and go to state 66
    INT     shift, and go to state 67
    FLOAT   shift, and go to state 68

    error  [reduce using rule 30 (StmtList)]
    RC     reduce using rule 30 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


State 45

   20 VarDec: VarDec LB INT RB •

    $default  reduce using rule 20 (VarDec)


State 46

   45 DefList: error • DefList
   48 Def: error • DecList SEMI
   53 Dec: error • ASSIGNOP Exp

    error     shift, and go to state 46
    ASSIGNOP  shift, and go to state 73
    TYPE      shift, and go to state 2
    STRUCT    shift, and go to state 3
    ID        shift, and go to state 9
